# whittle

./: Cargo.toml  README.md  SKILL.md  justfile  rust-toolchain.toml
.cargo/: clippy.toml  config.toml  deny.toml
.config/: nextest.toml
crates/whittle-core/: Cargo.toml
crates/whittle-core/src/: closed_set.rs  composition.rs  implies.rs  lib.rs  macros.rs  rule.rs  schema.rs  testing.rs  transform.rs
crates/whittle-core/src/primitive/: collection.rs  date.rs  datetime.rs  decimal.rs  float.rs  mod.rs  numeric.rs  path.rs  pattern.rs  string.rs  url.rs
crates/whittle-it/: Cargo.toml
crates/whittle-it/src/: lib.rs
crates/whittle-macros/: Cargo.toml
crates/whittle-macros/src/: lib.rs
docs/: ARCHITECTURE.md  DESIGN.md  IDEA.md  README.md
examples/: README.md  airline-domain.rs  cargo-package-name.rs  collection-validation.rs  composition-and.rs  composition-or.rs  flat-domain-error.rs  float-rules.rs  hello-refinement.rs  hex-and-normalization.rs  numeric-bounds.rs  proptest-arbitrary.rs  relative-path.rs  serde-roundtrip.rs  smart-constructor-newtype.rs  string-validation.rs  transformers.rs  verify.sh
scripts/: install-hooks.sh
scripts/hooks/: pre-commit  pre-push
src/: lib.rs
tests/: README.md  airline-domain.rs  airline_domain.rs  cargo-package-name.rs  cargo_package_name.rs  closed-set.rs  closed_set_serde.rs  collection-validation.rs  collection_validation.rs  composition-and.rs  composition-or.rs  composition_and.rs  composition_or.rs  cross-field-invariant.rs  cross_field_invariant.rs  domain-or.rs  domain_or.rs  flat-domain-error.rs  float-rules.rs  float_rules.rs  hello-refinement.rs  hello_refinement.rs  hex-and-normalization.rs  hex_and_normalization.rs  http_url.rs  http_url_proptest.rs  http_url_serde.rs  numeric-bounds.rs  numeric_bounds.rs  parse-from-string.rs  pattern_macro.rs  property-harness.rs  property_harness.rs  proptest-arbitrary.rs  proptest_arbitrary.rs  relative-path.rs  serde-roundtrip.rs  serde_roundtrip.rs  serialize_flat.rs  smart-constructor-newtype.rs  (+6 more)
