[package]
name        = "whittle-core"
version     = "0.0.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description = "Whittle kernel: Rule trait, Refined carrier, library primitives."

[features]
default  = []
hex      = []
proptest = ["dep:proptest"]
serde    = ["dep:serde"]
unicode  = []

[dependencies]
proptest  = { workspace = true, optional = true }
serde     = { workspace = true, optional = true }

[dev-dependencies]
proptest   = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_test = { workspace = true }

[lints]
workspace = true
