[package]
name        = "whittle-core"
version     = "0.0.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description = "Whittle kernel: Rule trait, Refined carrier, library primitives."

[features]
default  = []
decimal  = ["dep:rust_decimal"]
hex      = []
proptest = ["dep:proptest"]
serde    = ["dep:serde"]
unicode  = ["dep:unicode-general-category"]

[dependencies]
proptest                 = { workspace = true, optional = true }
rust_decimal             = { workspace = true, optional = true }
serde                    = { workspace = true, optional = true }
unicode-general-category = { workspace = true, optional = true }

[dev-dependencies]
proptest   = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_test = { workspace = true }

[lints]
workspace = true
