[package]
name        = "whittle-core"
version     = "0.0.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description = "Whittle kernel: Rule trait, Refined carrier, library primitives."

[features]
default  = []
chrono   = ["dep:chrono"]
decimal  = ["dep:rust_decimal"]
hex      = []
proptest = ["dep:proptest"]
regex    = ["dep:regex"]
serde    = ["dep:serde"]
unicode  = ["dep:unicode-general-category"]

[dependencies]
chrono                   = { workspace = true, optional = true }
proptest                 = { workspace = true, optional = true }
regex                    = { workspace = true, optional = true }
rust_decimal             = { workspace = true, optional = true }
serde                    = { workspace = true, optional = true }
unicode-general-category = { workspace = true, optional = true }

[dev-dependencies]
proptest   = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_test = { workspace = true }

[lints]
workspace = true
