[package]
name        = "whittle-it"
version     = "0.0.0"
publish     = false
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description = "Whittle integration-test crate; exercises the full feature matrix."

[dependencies]
whittle = { path = "../.." }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
