[package]
name        = "whittle-macros"
version     = "0.0.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description = "Whittle proc-macros: the compile-time-validated `pattern!` macro."

[lib]
proc-macro = true

[dependencies]
proc-macro2      = { workspace = true }
proc-macro-crate = { workspace = true }
quote            = { workspace = true }
regex            = { workspace = true }
syn              = { workspace = true }

[lints]
workspace = true
